# labs

./: README.md
Qts/build-qtfull-Desktop-Debug/: .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtfull
Qts/qt1/: mainwindow.h  mainwindow.ui
Qts/qt2/: CMakeLists.txt  form.cpp  mainwindow.cpp  mainwindow.h
Qts/qt3/: CMakeLists.txt  mainwindow.cpp
Qts/qt4/: mainwindow.cpp  mainwindow.h
Qts/qtfull/: CMakeLists.txt  bindialog.h  bindialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
Qts/qtfull-at7/: mainwindow.h
csharp/lab1/: Konto.cs  Osoba.cs  Program.cs  lab1.sln
csharp/lab10/: Data.cs  Program.cs
csharp/lab2/: lab2.sln
csharp/lab3/: lab3.sln
csharp/lab4/: lab4.sln
csharp/lab5/: lab5.sln
csharp/lab6/: lab6.sln
csharp/lab8/: lab8.sln
csharp/lab9/: Data.cs  FileLogger.cs  FileLoggerExtensions.cs  FileLoggerProvider.cs  NumbersBackgroundService.cs  Program.cs
java/java-lab4/: pom.xml
java/java-lab5-errs/: pom.xml
java/java-lab6/: pom.xml  test.txt
java/java-lab7/: pom.xml
java/lab1/: pom.xml
java/lab2/: pom.xml
java/lab3/: pom.xml
java/lab3b/: pom.xml
java/lab4/: pom.xml
java/lab5/: .gitignore  pom.xml
java/lab6/: pom.xml
java/lab7/: pom.xml
java/lab8/: pom.xml
java/lab9/: pom.xml
js/lab11/: index.html  lab2.js  lab3.js  lab4.js  lab5.js  lab6.js  lab7.js  lab8.js
js/lab12/: zad1.html  zad1.js  zad2.html  zad2.js
js/lab13/: zad1.html  zad1.js  zad2.html  zad2.js  zad3.html  zad3.js  zad4.html  zad4.js  zad5.html  zad5.js  (+2 more)
qts/qtfull-at7/: CMakeLists.txt  icons.qrc  mainwindow.cpp  mainwindow.ui
(+573 files in other folders)
